--- a/index.css
+++ b/index.css
@@ -3,12 +3,12 @@ a:hover{
     text-decoration: none;
 }
 body{
-    font-family: 'Times New Roman', Times, serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 ul,ol{
     list-style: none;
 }
-@font-face{
+/* @font-face{
     font-family: R_fonts;
     src: url("fonts/msyh.ttc")format("微软雅黑");
     src: url("fonts/simhei.ttf")format("黑体");
@@ -17,9 +17,9 @@ ul,ol{
 }
 [class = "icon-"],
 [class *= "icon-"]{
-    font-family: Times New Roman;
+    font-family: 微软雅黑;
     font-style: normal;
-}
+} */
 /* -------通用样式结束 --------*/
 
 
@@ -47,6 +47,7 @@ ul,ol{
     top: 20px;
     z-index: 9999;
     display: none;
+    background-color: aqua;
 }
 #R_header .top-bar .container .row .top-bar-1 a:hover img{
     display: block;   
